--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -26,9 +26,6 @@
             <li class="nav-item active">
               <a class="nav-link" routerLink="/galeria">Galeria</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" routerLink="">About</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link"></a>
             </li>
@@ -176,7 +173,7 @@
   <section class="section-3">
     <div class="container-fluid" id="main-content">
       <div class="container text-center">
-        <h1 class="text-dark">Nuestros cursos</h1>
+        <h1 class="text-dark">¿Qué esperas?</h1>
         <p class="text-secondary">Únete lo mas pronto posible</p>
       </div>
       <div class="container">
@@ -184,11 +181,10 @@
           <div class="col-3">
             <div class="contenedor">
               <figure>
-                <img class="img-1" src="../../../assets/foto1.jpg">
+                <img class="img-1" src="../../../assets/forma.jpg">
                 <div class="capa">
-                  <h3>sle capa</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Entrenamiento físico</h3>
+                  <p>El salto requiere más que conocimientos teóricos. Preparandote para tu salto.</p>
                 </div>
               </figure>
             </div>
@@ -198,9 +194,8 @@
               <figure>
                 <img class="img-1" src="../../../assets/foto2.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Equipo certificado</h3>
+                  <p>Contamos con instructores altamente capacitados para orientarte durante el proceso de formación.</p>
                 </div>
               </figure>
             </div>
@@ -208,11 +203,10 @@
           <div class="col-6">
             <div class="contenedor">
               <figure>
-                <img class="img-1" src="../../../assets/foto3.jpg">
+                <img class="img-1" src="../../../assets/adventure.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Caída libre</h3>
+                  <p>El curso mas popular entre nuestros federados, caracterizado por su gran adrenalina y la posibilidad de realizar piruetas.</p>
                 </div>
               </figure>
             </div>
@@ -228,11 +222,10 @@
           <div class="col-3">
             <div class="contenedor">
               <figure>
-                <img class="img-2" src="../../../assets/foto1.jpg">
+                <img class="img-2" src="../../../assets/skydivers.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Comunidad</h3>
+                  <p>Contamos con una comunidad muy unida. ¡La drenalina y compañerismo estan asegurados!.</p>
                 </div>
               </figure>
             </div>
@@ -240,11 +233,10 @@
           <div class="col-3">
             <div class="contenedor2">
               <figure>
-                <img class="img-2" src="../../../assets/foto2.jpg">
+                <img class="img-2" src="../../../assets/jump.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Puntos</h3>
+                  <p>Los puntos de partida y aterrizaje son previamente establecidos para asegurar tu experiencia.</p>
                 </div>
               </figure>
             </div>
@@ -252,11 +244,10 @@
           <div class="col-3">
             <div class="contenedor">
               <figure>
-                <img class="img-3" src="../../../assets/foto3.jpg">
+                <img class="img-3" src="../../../assets/parachute.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Vistas increibles</h3>
+                  <p>Cada salto es una experiencia diferente en la cual puedes disfrutar de impresionantes vistas.</p>
                 </div>
               </figure>
             </div>
@@ -264,11 +255,10 @@
           <div class="col-3">
             <div class="contenedor2">
               <figure>
-                <img class="img-3" src="../../../assets/foto1.jpg">
+                <img class="img-3" src="../../../assets/skydive-5379579_1920.jpg">
                 <div class="capa">
-                  <h3>sle capa2</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio animi soluta sunt tempora
-                    atque.</p>
+                  <h3>Equipamiento</h3>
+                  <p>Contamos con un equipamiento en perfecto estado para mantener tu seguridad, porque eres lo más importante para nosotros.</p>
                 </div>
               </figure>
             </div>
