--- a/fesapade/src/app/components/instructor/instructor.component.css
+++ b/fesapade/src/app/components/instructor/instructor.component.css
@@ -149,56 +149,59 @@ main {
 
 }
 
-.card-body .btn-content{
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    font-size: 13px;
-    font-weight: bolder;
-    font-family: 'Roboto', sans-serif;
+.card-footer .btn-content{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 13px;
+  font-weight: bolder;
+  font-family: 'Roboto', sans-serif;
 
-    
+  
 }
 
-.card-body button{
-    text-transform:uppercase;
-    background: none;
-    border:2px solid #364151;
-    padding: 12px 20px;
-    min-width: 200px;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    transition: color 0.4 linear;
-
-}
-
-.card-body button:hover{
-    color: #fff;
+.card-footer button{
+  text-transform:uppercase;
+  background: none;
+  border:2px solid #364151;
+  padding: 12px 20px;
+  min-width: 200px;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: color 0.4 linear;
 
 }
 
-.card-body button::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #364151;
-    z-index: -1;
-    transition: transform 0.5s;
-    transform-origin: 0 0;
-    transition-timing-function: cubic-bezier(0, 5, 1.6, 0.4, 0.7);
+.card-footer button:hover{
+  color: #fff;
+
+}
+
+.card-footer button::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #364151;
+  z-index: -1;
+  transition: transform 0.5s;
+  transform-origin: 0 0;
+  transition-timing-function: cubic-bezier(0, 5, 1.6, 0.4, 0.7);
 }
 .btn2::before{
-    transform: scaleX(0);
+  transform: scaleX(0);
 
 }
 .btn2:hover::before{
-    transform: scaleX(1);
-    
+  transform: scaleX(1);
+  
+}
+.card-footer{
+  border: none;
 }
 /*end section-1*/
 /*  SIDEBAR STARTS HERE  */
