--- a/fesapade/src/app/components/instructor/instructor.component.html
+++ b/fesapade/src/app/components/instructor/instructor.component.html
@@ -56,7 +56,7 @@
 
                     <br><br>
                     <div class="btn-content">
-                      <button class="btn2" role="link" role="link" routerLink="/list-federados">Ir al curso</button>
+                      <button class="btn2" role="link" role="link" routerLink="/list-federados" (click)="seleccionar(curso.id_curso)">Ir al curso</button>
 
                     </div>
                   </div>
