--- a/fesapade/src/app/components/admineditarcurso/admineditarcurso.component.html
+++ b/fesapade/src/app/components/admineditarcurso/admineditarcurso.component.html
@@ -70,6 +70,7 @@
                             <select id="inputState" class="form-control" required [(ngModel)]="curs.estado" name="estado" #estC="ngModel" >
                                 <option value="INICIADO" selected>INICIADO</option>
                                 <option value="FINALIZADO" >FINALIZADO</option>
+                                <option value="FINALIZADO" >VISUAL</option>
                             </select>
                             <div *ngIf="(estC.invalid && (estC.dirty || estC.touched))">
                                 
